--- a/app/src/main/res/layout/cinema_fragment.xml
+++ b/app/src/main/res/layout/cinema_fragment.xml
@@ -5,7 +5,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="影院页面"
+        android:text="影面"
         android:textSize="36sp" />
 
 </LinearLayout>
