--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,167 +10,178 @@
     tools:context=".MainActivity">
 
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="9.2">
 
-    </androidx.viewpager2.widget.ViewPager2>
-
-    <LinearLayout
-            android:id="@+id/btnHome"
-            android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_height="0dp"
-            android:layout_weight="0.8"
-            android:weightSum="4"
-            android:background="@color/colorBackground2"
-            >
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:cardElevation="3dp"
-                android:layout_marginLeft="7dp"
-                android:layout_marginBottom="6dp"
-                android:layout_marginTop="5dp"
-                >
-
-                <LinearLayout
-                    android:id="@+id/btnMain"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:weightSum="5">
-
-                    <ImageView
-                        android:id="@+id/imageHome"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="2.8"
-                        android:src="@mipmap/home" />
-
-                    <TextView
-                        android:id="@+id/textHome"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="2.2"
-                        android:gravity="center"
-                        android:text="首页"
-                        android:textColor="@color/colorBackground1" />
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:cardElevation="3dp"
-                android:layout_marginLeft="7dp"
-                android:layout_marginBottom="6dp"
-                android:layout_marginTop="5dp"
-                >
-                <LinearLayout
-                    android:id="@+id/btnMovie"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:weightSum="5"
-                    >
-                    <ImageView
-                        android:id="@+id/imageMovie"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="2.8"
-                        android:src="@mipmap/movie"
-                        />
-
-                    <TextView
-                        android:id="@+id/textMovie"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="2.2"
-                        android:gravity="center"
-                        android:text="电影
-"/>
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:cardElevation="3dp"
-                android:layout_marginLeft="7dp"
-                android:layout_marginBottom="6dp"
-                android:layout_marginTop="5dp"
-                >
-                <LinearLayout
-                    android:id="@+id/btnCinema"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:weightSum="5"
-                    >
-
-                    <ImageView
-                        android:id="@+id/imageCinema"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="2.8"
-                        android:src="@mipmap/cinema" />
-
-                    <TextView
-                        android:id="@+id/textCinema"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="2.2"
-                        android:gravity="center"
-                        android:text="影院"/>
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:cardElevation="3dp"
-                android:layout_marginLeft="7dp"
-                android:layout_marginBottom="6dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="7dp"
-                >
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:weightSum="5"
-                    android:id="@+id/btnUser"
-                    >
-                    <ImageView
-                        android:id="@+id/imageUser"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="2.8"
-                        android:src="@mipmap/user"/>
-
-                    <TextView
-                        android:id="@+id/textUser"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="2.2"
-                        android:gravity="center"
-                        android:text="我的"/>
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
+<!--    <androidx.viewpager2.widget.ViewPager2-->
+<!--        android:id="@+id/viewPager"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_weight="9.2">-->
+<!--=======-->
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Hello World!"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
 
-        </LinearLayout>
+<!--    </androidx.viewpager2.widget.ViewPager2>-->
+
+<!--    <LinearLayout-->
+<!--            android:id="@+id/btnHome"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:layout_weight="0.8"-->
+<!--            android:weightSum="4"-->
+<!--            android:background="@color/colorBackground2"-->
+<!--            >-->
+
+<!--            <androidx.cardview.widget.CardView-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_weight="1"-->
+<!--                app:cardElevation="3dp"-->
+<!--                android:layout_marginLeft="7dp"-->
+<!--                android:layout_marginBottom="6dp"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                >-->
+
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/btnMain"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:orientation="vertical"-->
+<!--                    android:weightSum="5">-->
+
+<!--                    <ImageView-->
+<!--                        android:id="@+id/imageHome"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="0dp"-->
+<!--                        android:layout_weight="2.8"-->
+<!--                        android:src="@mipmap/home" />-->
+
+<!--                    <TextView-->
+<!--                        android:id="@+id/textHome"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="0dp"-->
+<!--                        android:layout_weight="2.2"-->
+<!--                        android:gravity="center"-->
+<!--                        android:text="首页"-->
+<!--                        android:textColor="@color/colorBackground1" />-->
+<!--                </LinearLayout>-->
+
+<!--            </androidx.cardview.widget.CardView>-->
+
+<!--            <androidx.cardview.widget.CardView-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_weight="1"-->
+<!--                app:cardElevation="3dp"-->
+<!--                android:layout_marginLeft="7dp"-->
+<!--                android:layout_marginBottom="6dp"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                >-->
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/btnMovie"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:orientation="vertical"-->
+<!--                    android:weightSum="5"-->
+<!--                    >-->
+<!--                    <ImageView-->
+<!--                        android:id="@+id/imageMovie"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="0dp"-->
+<!--                        android:layout_weight="2.8"-->
+<!--                        android:src="@mipmap/movie"-->
+<!--                        />-->
+
+<!--                    <TextView-->
+<!--                        android:id="@+id/textMovie"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="0dp"-->
+<!--                        android:layout_weight="2.2"-->
+<!--                        android:gravity="center"-->
+<!--                        android:text="电影-->
+<!--"/>-->
+<!--                </LinearLayout>-->
+
+<!--            </androidx.cardview.widget.CardView>-->
+
+<!--            <androidx.cardview.widget.CardView-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_weight="1"-->
+<!--                app:cardElevation="3dp"-->
+<!--                android:layout_marginLeft="7dp"-->
+<!--                android:layout_marginBottom="6dp"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                >-->
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/btnCinema"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:orientation="vertical"-->
+<!--                    android:weightSum="5"-->
+<!--                    >-->
+
+<!--                    <ImageView-->
+<!--                        android:id="@+id/imageCinema"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="0dp"-->
+<!--                        android:layout_weight="2.8"-->
+<!--                        android:src="@mipmap/cinema" />-->
+
+<!--                    <TextView-->
+<!--                        android:id="@+id/textCinema"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="0dp"-->
+<!--                        android:layout_weight="2.2"-->
+<!--                        android:gravity="center"-->
+<!--                        android:text="影院"/>-->
+<!--                </LinearLayout>-->
+
+<!--            </androidx.cardview.widget.CardView>-->
+
+<!--            <androidx.cardview.widget.CardView-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_weight="1"-->
+<!--                app:cardElevation="3dp"-->
+<!--                android:layout_marginLeft="7dp"-->
+<!--                android:layout_marginBottom="6dp"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                android:layout_marginRight="7dp"-->
+<!--                >-->
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:orientation="vertical"-->
+<!--                    android:weightSum="5"-->
+<!--                    android:id="@+id/btnUser"-->
+<!--                    >-->
+<!--                    <ImageView-->
+<!--                        android:id="@+id/imageUser"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="0dp"-->
+<!--                        android:layout_weight="2.8"-->
+<!--                        android:src="@mipmap/user"/>-->
+
+<!--                    <TextView-->
+<!--                        android:id="@+id/textUser"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="0dp"-->
+<!--                        android:layout_weight="2.2"-->
+<!--                        android:gravity="center"-->
+<!--                        android:text="我的"/>-->
+<!--                </LinearLayout>-->
+
+<!--            </androidx.cardview.widget.CardView>-->
+
+
+<!--        </LinearLayout>-->
 
 </LinearLayout>
