--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,17 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="9.2">
-=======
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
     </androidx.viewpager2.widget.ViewPager2>
 
     <LinearLayout
@@ -103,8 +92,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="2.2"
                         android:gravity="center"
-                        android:text="电影
-"/>
+                        android:text="电影"/>
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
