--- a/app/src/main/res/layout/new_fragment.xml
+++ b/app/src/main/res/layout/new_fragment.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="电影页面"
+        android:text="新品页面"
         android:textSize="36sp" />
+
 
 </LinearLayout>
