--- a/app/src/main/res/layout/settlement_fragment.xml
+++ b/app/src/main/res/layout/settlement_fragment.xml
@@ -5,8 +5,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="首页页面"
+        android:text="下单页面"
         android:textSize="36sp" />
-
 
 </LinearLayout>
