--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="colorBackground2">#DFF7FA</color>
     <color name="colorBackground1">#00BCD4</color>
 
+    <color name="colorBackground4">#FCFDFD</color>
+    <color name="colorText2">#54888E</color>
+
 </resources>
