--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="2.8"
-                        android:src="@mipmap/home1" />
+                        android:src="@mipmap/home1" >
+                    </ImageView>
 
                     <TextView
                         android:id="@+id/textHome"
