--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="colorBackground3">#F0F0F0</color>
     <color name="colorBackground2">#DFF7FA</color>
     <color name="colorBackground1">#00BCD4</color>
-
+    <color name="colorButton">#FF9800</color>
 </resources>
