--- a/app/src/main/res/layout/cinema_fragment.xml
+++ b/app/src/main/res/layout/cinema_fragment.xml
@@ -5,8 +5,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="新品页面"
-        android:textSize="36sp" />
+        android:text="电影界面"
+        android:textSize="36sp"
+
+        />
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3.1"
+        android:scaleType="centerCrop"
+        />
 
 
 </LinearLayout>
