--- a/app/src/main/res/layout/products_fragment.xml
+++ b/app/src/main/res/layout/products_fragment.xml
@@ -1,44 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:textSize="36sp"
-    android:weightSum="10"
-    >
+    android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorBackground3"
- />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3.1"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/movie"
-        />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="-- 今日新品 --"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:textColor="@color/colorText2"
-        android:background="@color/colorBackground4"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/newRecycler"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="6.2"
-        android:layout_marginLeft="3dp"
-        android:layout_marginRight="3dp"/>
-
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="电影页面"
+        android:textSize="36sp" />
 
 
 </LinearLayout>
